--- a/css/main.css
+++ b/css/main.css
@@ -112,9 +112,15 @@ h5 {
   border: 1px solid transparent;
   padding: 13px 36px 15px 36px;
   border-radius: 30px;
-  cursor: pointer;
   background: #4985FF;
+  -webkit-transition: background 300ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background 300ms cubic-bezier(0.4, 0, 0.2, 1);
   -webkit-box-shadow: 0 0 10px rgba(111, 111, 111, 0.25);
           box-shadow: 0 0 10px rgba(111, 111, 111, 0.25);
+}
+
+.hero__link:hover, .hero__link:focus {
+  background: #3763bb;
+  color: #E0E0E0;
 }
 /*# sourceMappingURL=main.css.map */
