--- a/sass/components/_section-hero.scss
+++ b/sass/components/_section-hero.scss
@@ -34,9 +34,15 @@
         border: 1px solid transparent;
         padding: 13px 36px 15px 36px;
         border-radius: 30px;
-        cursor: pointer;
         background: $accent-color;
+        transition: background 300ms cubic-bezier(0.4, 0, 0.2, 1);
 
         box-shadow: 0 0 10px rgba(111, 111, 111, 0.25);
+
+        &:hover,
+        &:focus{
+            background: #3763bb;
+            color: $light-grey-color;
+        }
     }
 }
