--- a/sass/components/_section-hero.scss
+++ b/sass/components/_section-hero.scss
@@ -1,11 +1,10 @@
 .hero{
-    padding: 319px 0 335px 0;
+    padding: 319px 0 315px 0;
     max-width: 1920px;
     max-height: 900px;
     margin-left: auto;
     margin-right: auto;
-    background: $grey-color;
-    background-image: linear-gradient( to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
+    background: $grey-color url(../images/hero.jpg) center no-repeat;
 
     &__text{
         margin-bottom: 20px;
