--- a/css/main.css
+++ b/css/main.css
@@ -73,15 +73,29 @@ h5 {
   color: #ffffff;
 }
 
+.nav__link--current {
+  position: relative;
+  color: #ffffff;
+}
+
+.nav__link--current::after {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: -42px;
+  border: 1px solid #ffffff;
+  -webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .hero {
-  padding: 319px 0 335px 0;
+  padding: 319px 0 315px 0;
   max-width: 1920px;
   max-height: 900px;
   margin-left: auto;
   margin-right: auto;
-  background: #999999;
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero.jpg);
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
+  background: #999999 url(../images/hero.jpg) center no-repeat;
 }
 
 .hero__text {
