--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -27,4 +27,20 @@
         line-height: 20 / 16 * 100%;
         color: $white-color;
     }
+
+    &__link--current{
+        position: relative;
+        color: $white-color;
+
+        &::after{
+            content: '';
+            position: absolute;
+            display: block;
+            width: 100%;
+            bottom: -42px;
+
+            border: 1px solid $white-color;
+            transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+    }
 }
