--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import './utils/vars';
 @import './components/selector';
+@import './components/menu';
 @import './utils/container';
 @import './components/page-header';
 @import './components/section-hero';
