--- a/css/main.css
+++ b/css/main.css
@@ -34,48 +34,28 @@ h5 {
 }
 
 .container {
-  width: 100%;
   max-width: 1140px;
   padding: 0 15px;
   margin: 0 auto;
 }
 
 .page-header {
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1000;
-  border-bottom: 1px solid rgba(161, 161, 161, 0.5);
+  position: relative;
 }
 
-.nav__list {
+.nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
-  padding: 40px 0;
-}
-
-.nav__item {
-  margin-right: 40px;
-}
-
-.nav__item:last-child {
-  margin-right: 0;
-}
-
-.nav__link {
-  font-size: 16px;
-  line-height: 125%;
-  color: #ffffff;
 }
 
 .nav__link--current {
   position: relative;
   color: #ffffff;
+  display: inline-block;
 }
 
 .nav__link--current::after {
@@ -83,58 +63,63 @@ h5 {
   position: absolute;
   display: block;
   width: 100%;
-  bottom: -42px;
   border: 1px solid #ffffff;
   -webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hero {
-  padding: 319px 0 315px 0;
-  max-width: 1920px;
-  max-height: 900px;
-  margin-left: auto;
-  margin-right: auto;
-  background: #999999 url(../images/hero.jpg) center no-repeat;
-}
-
-.hero__text {
+.nav__item {
   margin-bottom: 20px;
-  font-size: 16px;
-  line-height: 125%;
-  text-align: center;
-  color: #ffffff;
 }
 
-.hero__title {
-  margin-bottom: 50px;
-  font-weight: 800;
-  font-size: 48px;
-  line-height: 133.33333%;
-  text-align: center;
-  color: #ffffff;
+.nav__item:last-child {
+  margin-bottom: 0;
 }
 
-.hero__link {
+.menu {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background: transparent;
+}
+
+@media screen and (min-width: 768px) {
+  .menu {
+    display: none;
+  }
+}
+
+.menu .icon-close {
+  display: none;
+}
+
+.menu.is-open .icon-close {
   display: block;
-  margin: auto;
-  max-width: 200px;
-  text-align: center;
-  font-size: 16px;
-  line-height: 125%;
-  color: #ffffff;
-  border: 1px solid transparent;
-  padding: 13px 36px 15px 36px;
-  border-radius: 30px;
-  background: #4985FF;
-  -webkit-transition: background 300ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: background 300ms cubic-bezier(0.4, 0, 0.2, 1);
-  -webkit-box-shadow: 0 0 10px rgba(111, 111, 111, 0.25);
-          box-shadow: 0 0 10px rgba(111, 111, 111, 0.25);
 }
 
-.hero__link:hover, .hero__link:focus {
-  background: #3763bb;
-  color: #E0E0E0;
+.menu.is-open .icon-open {
+  display: none;
+}
+
+.nav__list {
+  background-color: rgba(73, 133, 255, 0.8);
+  padding: 40px 0;
+  text-align: center;
+  font-size: 20px;
+}
+
+.nav__list.is-open {
+  display: block;
+}
+
+@media screen and (max-width: 767px) {
+  .nav__list {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+  }
 }
 /*# sourceMappingURL=main.css.map */
