--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,46 +1,122 @@
-.page-header{
-    width: 100%;
+// .page-header{
+//     width: 100%;
 
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1000;
-    border-bottom: 1px solid rgba(161, 161, 161, 0.5);
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     z-index: 1000;
+//     border-bottom: 1px solid rgba(161, 161, 161, 0.5);
+// }
+// .nav{
+//     &__list{
+//         display: flex;
+//         justify-content: flex-end;
+//         padding: 40px 0;
+//     }
+
+//     &__item{
+//         margin-right: 40px;
+
+//         &:last-child{
+//             margin-right: 0;
+//         }
+//     }
+
+//     &__link{
+//         font-size: 16px;
+//         line-height: 20 / 16 * 100%;
+//         color: $white-color;
+//     }
+
+//     &__link--current{
+//         position: relative;
+//         color: $white-color;
+
+//         &::after{
+//             content: '';
+//             position: absolute;
+//             display: block;
+//             width: 100%;
+//             bottom: -42px;
+
+//             border: 1px solid $white-color;
+//             transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1);
+//         }
+//     }
+// }
+.page-header{
+    position: relative;
 }
 .nav{
-    &__list{
-        display: flex;
-        justify-content: flex-end;
-        padding: 40px 0;
-    }
-
-    &__item{
-        margin-right: 40px;
-
-        &:last-child{
-            margin-right: 0;
-        }
-    }
-
-    &__link{
-        font-size: 16px;
-        line-height: 20 / 16 * 100%;
-        color: $white-color;
-    }
+    display: flex;
+    justify-content: flex-end;
 
     &__link--current{
         position: relative;
         color: $white-color;
+        display: inline-block;
 
         &::after{
             content: '';
             position: absolute;
             display: block;
             width: 100%;
-            bottom: -42px;
+            
 
             border: 1px solid $white-color;
             transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1);
         }
+    }
+
+    &__item{
+        margin-bottom: 20px;
+
+        &:last-child{
+            margin-bottom: 0;
+        }
+    }
+}
+.menu{
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    border: none;
+    background: transparent;
+
+    @media screen and (min-width: 768px){
+        display: none;
+    }
+}
+.menu .icon-close{
+    display: none;
+}
+.menu.is-open .icon-close{
+    display: block;
+}
+.menu.is-open .icon-open{
+    display: none;
+}
+
+.nav__list{
+    // position: absolute;
+    // top: 100%;
+    // left: 0;
+    // width: 100%;
+
+    background-color: rgba(73, 133, 255, .8);
+    padding: 40px 0;
+    text-align: center;
+    font-size: 20px;
+
+    &.is-open{
+        display: block;
+    }
+
+    @media screen and (max-width: 767px){
+        display: none;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
     }
 }
