--- a/sass/components/_section-hero.scss
+++ b/sass/components/_section-hero.scss
@@ -1,47 +1,47 @@
-.hero{
-    padding: 319px 0 315px 0;
-    max-width: 1920px;
-    max-height: 900px;
-    margin-left: auto;
-    margin-right: auto;
-    background: $grey-color url(../images/hero.jpg) center no-repeat;
+// .hero{
+//     padding: 319px 0 315px 0;
+//     max-width: 1920px;
+//     max-height: 900px;
+//     margin-left: auto;
+//     margin-right: auto;
+//     background: $grey-color url(../images/hero.jpg) center no-repeat;
 
-    &__text{
-        margin-bottom: 20px;
-        font-size: 16px;
-        line-height: 20 / 16 * 100%;
-        text-align: center;
-        color: $white-color;
-    }
-    &__title{
-        margin-bottom: 50px;
-        font-weight: 800;
-        font-size: 48px;
-        line-height: 64 / 48 * 100%;
-        text-align: center;
-        color: $white-color;
-    }
-    &__link{
-        display: block;
-        margin: auto;
-        max-width: 200px;
-        text-align: center;
+//     &__text{
+//         margin-bottom: 20px;
+//         font-size: 16px;
+//         line-height: 20 / 16 * 100%;
+//         text-align: center;
+//         color: $white-color;
+//     }
+//     &__title{
+//         margin-bottom: 50px;
+//         font-weight: 800;
+//         font-size: 48px;
+//         line-height: 64 / 48 * 100%;
+//         text-align: center;
+//         color: $white-color;
+//     }
+//     &__link{
+//         display: block;
+//         margin: auto;
+//         max-width: 200px;
+//         text-align: center;
 
-        font-size: 16px;
-        line-height: 20 / 16 * 100%;
-        color: $white-color;
-        border: 1px solid transparent;
-        padding: 13px 36px 15px 36px;
-        border-radius: 30px;
-        background: $accent-color;
-        transition: background 300ms cubic-bezier(0.4, 0, 0.2, 1);
+//         font-size: 16px;
+//         line-height: 20 / 16 * 100%;
+//         color: $white-color;
+//         border: 1px solid transparent;
+//         padding: 13px 36px 15px 36px;
+//         border-radius: 30px;
+//         background: $accent-color;
+//         transition: background 300ms cubic-bezier(0.4, 0, 0.2, 1);
 
-        box-shadow: 0 0 10px rgba(111, 111, 111, 0.25);
+//         box-shadow: 0 0 10px rgba(111, 111, 111, 0.25);
 
-        &:hover,
-        &:focus{
-            background: #3763bb;
-            color: $light-grey-color;
-        }
-    }
-}
+//         &:hover,
+//         &:focus{
+//             background: #3763bb;
+//             color: $light-grey-color;
+//         }
+//     }
+// }
