--- a/css/main.css
+++ b/css/main.css
@@ -122,4 +122,145 @@ h5 {
     width: 100%;
   }
 }
+
+.hero {
+  padding: 48px 0 45px 0;
+  max-width: 350px;
+  max-height: 300px;
+  margin-left: auto;
+  margin-right: auto;
+  background: #999999 url(../images/mobile.jpg) center no-repeat;
+}
+
+.hero__text {
+  margin-bottom: 20px;
+  font-size: 16px;
+  line-height: 125%;
+  text-align: center;
+  color: #ffffff;
+  display: none;
+}
+
+.hero__title {
+  margin-bottom: 25px;
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 121.42857%;
+  text-align: center;
+  color: #ffffff;
+}
+
+.hero__link {
+  display: block;
+  margin: auto;
+  max-width: 200px;
+  text-align: center;
+  font-size: 16px;
+  line-height: 125%;
+  color: #ffffff;
+  border: 1px solid transparent;
+  padding: 13px 36px 15px 36px;
+  border-radius: 30px;
+  background: #4985FF;
+  -webkit-transition: background 300ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background 300ms cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-box-shadow: 0 0 10px rgba(111, 111, 111, 0.25);
+          box-shadow: 0 0 10px rgba(111, 111, 111, 0.25);
+}
+
+.hero__link:hover, .hero__link:focus {
+  background: #3763bb;
+  color: #E0E0E0;
+}
+
+.features {
+  padding: 30px 0;
+}
+
+.features__title {
+  margin-bottom: 30px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 143.75%;
+  text-align: center;
+  color: #323232;
+}
+
+.features__text {
+  font-size: 16px;
+  line-height: 156.25%;
+  text-align: center;
+  color: #999999;
+  display: none;
+}
+
+.features__item {
+  margin-bottom: 30px;
+}
+
+.features__name {
+  margin-bottom: 15px;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 142.85714%;
+  color: #000000;
+  text-align: center;
+}
+
+.features__sketch {
+  margin-bottom: 10px;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 150%;
+  color: #999999;
+  text-align: center;
+}
+
+.features__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 90px;
+  height: 90px;
+  border: 1px solid #4985FF;
+  border-radius: 50%;
+  fill: #4985FF;
+  -webkit-transition: border 300ms cubic-bezier(0.4, 0, 0.2, 1), fill 300ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 300ms cubic-bezier(0.4, 0, 0.2, 1), fill 300ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin: auto;
+}
+
+.features__link:hover, .features__link:focus {
+  fill: #999999;
+  border-color: #999999;
+}
+
+.features__button {
+  display: block;
+  margin: auto;
+  max-width: 200px;
+  text-align: center;
+  font-size: 16px;
+  line-height: 125%;
+  color: #ffffff;
+  border: 1px solid transparent;
+  padding: 13px 36px 15px 36px;
+  border-radius: 30px;
+  background: #4985FF;
+  -webkit-transition: background 300ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background 300ms cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-box-shadow: 0 0 10px rgba(111, 111, 111, 0.25);
+          box-shadow: 0 0 10px rgba(111, 111, 111, 0.25);
+}
+
+.features__button:hover, .features__button:focus {
+  background: #3763bb;
+  color: #E0E0E0;
+}
 /*# sourceMappingURL=main.css.map */
