--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,4 +4,4 @@
 @import './utils/container';
 @import './components/page-header';
 @import './components/section-hero';
-
+@import './components/features';
