--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,3 +5,4 @@
 @import './components/page-header';
 @import './components/section-hero';
 @import './components/features';
+@import './components/service';
