--- a/sass/utils/_container.scss
+++ b/sass/utils/_container.scss
@@ -3,8 +3,13 @@
     max-width: 1140px;
     padding: 0 15px;
     margin: 0 auto;
+    // box-sizing: content-box;
 
     @media (min-width: 480px){
        
     }
+}
+.wrapper{
+    min-height: 100%;
+    overflow: hidden;
 }
