--- a/sass/components/_service.scss
+++ b/sass/components/_service.scss
@@ -25,14 +25,43 @@
 //     }
 // }
 .service__link{
+    padding: 30px 0;
+    display: block;
     font-size: 16px;
     line-height: 20 / 16 * 100%;
     text-decoration: underline;
     color: $accent-color;
+
+    border-bottom: 1px solid #E0E0E0;
 }
 .service__img{
-    margin-bottom: 30px;
     width: 100%;
     border-radius: 30px;
     box-shadow: 0px 0px 10px rgba(111, 111, 111, 0.25);
+}
+.service__list{
+    margin-top: 30px;
+}
+.service__subitem{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.service__subtitle{
+    margin-left: 20px;
+    font-weight: normal;
+    font-size: 36px;
+    line-height: 53 / 36 *100%;
+    color: $black-color;
+}
+.service__subtext{
+    text-align: center;
+    margin-bottom: 15px;
+    font-size: 16px;
+    line-height: 25 / 16 * 100%;
+    color: $grey-color;
+
+    &:last-child{
+        margin-bottom: 0px;
+    }
 }
