--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,3 +6,5 @@
 @import './components/section-hero';
 @import './components/features';
 @import './components/service';
+@import './components/works';
+@import './components/team';
