--- a/sass/components/_works.scss
+++ b/sass/components/_works.scss
@@ -13,7 +13,7 @@
 }
 .works__link{
     display: block;
-    width: 200px;
+    max-width: 200px;
     margin: auto;
 
     padding: 13px 36px 15px 36px;
