--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,3 +9,5 @@
 @import './components/works';
 @import './components/team';
 @import './components/project';
+@import './components/aboutus';
+@import './components/video';
