--- a/css/main.css
+++ b/css/main.css
@@ -491,4 +491,32 @@ h5 {
           box-shadow: 0 0 10px rgba(111, 111, 111, 0.25);
   border-radius: 30px;
 }
+
+.aboutus {
+  max-width: 350px;
+  max-height: 300px;
+  margin-left: auto;
+  margin-right: auto;
+  background: #999999 url(../images/footer-mobile.jpg) center no-repeat;
+}
+
+.aboutus__container {
+  padding: 30px 0 0 0;
+}
+
+.aboutus__title {
+  margin-bottom: 15px;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 143.75%;
+  text-align: center;
+  color: #ffffff;
+}
+
+.aboutus__text {
+  font-size: 12px;
+  line-height: 150%;
+  text-align: center;
+  color: #ffffff;
+}
 /*# sourceMappingURL=main.css.map */
