--- a/sass/components/_aboutus.scss
+++ b/sass/components/_aboutus.scss
@@ -1,6 +1,6 @@
 .aboutus{
     max-width: 350px;
-    max-height: 300px;
+    height: 250px;
     margin-left: auto;
     margin-right: auto;
     background: $grey-color url(../images/footer-mobile.jpg) center no-repeat;
