--- a/sass/components/_project.scss
+++ b/sass/components/_project.scss
@@ -30,6 +30,13 @@
 .project__img{
     width: 100%;
     border-radius: 10px;
+    filter: grayscale(1);
+    transition: all 300ms ease 0s;
+
+    &:hover,
+    &:focus{
+        filter: grayscale(0);
+    }
 }
 .project__link{
     display: block;
