--- a/sass/components/_video.scss
+++ b/sass/components/_video.scss
@@ -1,1 +1,77 @@
-.video{}
+.video{
+    margin-top: -40%;
+    padding-bottom: 30px;
+}
+.video__content iframe{
+    max-width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    object-fit: cover;
+}
+.video__form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.video__title{
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 23 / 16 * 100%;
+    text-align: center;
+    color: $black-color;
+
+    &::before{
+        content: '';
+        border-bottom: 1px solid #e0e0e0;
+        width: 100%;
+        display: block;
+        margin: 30px 0;
+    }
+}
+.video__text{
+    margin-top: 20px;
+    font-size: 12px;
+    line-height: 18 / 12 * 100%;
+    text-align: center;
+    color: $grey-color;
+}
+.video__subscribe{
+    margin-top: 20px;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 15px 20px 13px 33px;
+    font-size: 13px;
+    line-height: 21 / 13 * 100%;
+    color: $grey-color;
+
+    border: 1px solid #F2F2F2;
+    border-radius: 30px;
+    box-shadow: 0 0 10px rgba(111, 111, 111, 0.25);
+}
+.video__btn{
+    margin-top: 20px;
+    padding: 13px 36px 15px 36px;
+    background: $accent-color;
+    border-color: transparent;
+    box-shadow: 0 0 10px rgba(111, 111, 111, 0.25);
+    border-radius:30px;
+    font-size: 16px;
+    line-height: 20 / 16 * 100%;
+    text-align: center;
+    color: $white-color;
+    display: inline-block;
+    align-items: center;
+    transition: all 300ms ease 0s;
+
+    &:hover,
+    &:focus{
+        background: #2055c0;
+    }
+}
+.video__subtext{
+    margin-top: 20px;
+    font-size: 12px;
+    line-height: 18 / 12 * 100%;
+    text-align: center;
+    color: $grey-color;
+}
