--- a/css/main.css
+++ b/css/main.css
@@ -558,7 +558,7 @@ h5 {
 .video__title {
   font-weight: bold;
   font-size: 16px;
-  line-height: 143.75%;
+  line-height: 137.5%;
   text-align: center;
   color: #000000;
 }
@@ -624,5 +624,22 @@ h5 {
   line-height: 150%;
   text-align: center;
   color: #999999;
+}
+
+.footer {
+  padding: 30px 0;
+  background: #F6F6F8;
+}
+
+.footer__title {
+  margin-bottom: 20px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 137.5%;
+  color: #000000;
+}
+
+.footer__basic {
+  margin-top: 30px;
 }
 /*# sourceMappingURL=main.css.map */
