--- a/css/main.css
+++ b/css/main.css
@@ -631,6 +631,12 @@ h5 {
   background: #F6F6F8;
 }
 
+.footer__flex {
+  padding-bottom: 30px;
+  border-bottom: 1px solid #E0E0E0;
+  width: 100%;
+}
+
 .footer__title {
   margin-bottom: 20px;
   font-weight: 600;
@@ -639,7 +645,60 @@ h5 {
   color: #000000;
 }
 
+.footer__item {
+  margin-bottom: 10px;
+}
+
+.footer__item:last-child {
+  margin-bottom: 0;
+}
+
+.footer__link {
+  font-size: 14px;
+  line-height: 157.14286%;
+  color: #999999;
+  fill: #999999;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: color 300ms cubic-bezier(0.4, 0, 0.2, 1), fill 300ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 300ms cubic-bezier(0.4, 0, 0.2, 1), fill 300ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer__link:focus, .footer__link:hover {
+  color: #3090eb;
+  fill: #3090eb;
+}
+
+.footer__address {
+  font-size: 14px;
+  line-height: 157.14286%;
+  color: #999999;
+  fill: #999999;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .footer__basic {
   margin-top: 30px;
+}
+
+.footer__icon {
+  margin-right: 15px;
+}
+
+.footer__line {
+  padding-top: 30px;
+  font-size: 13px;
+  line-height: 161.53846%;
+  text-align: center;
+  color: #999999;
 }
 /*# sourceMappingURL=main.css.map */
