--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,6 +1,12 @@
 .footer{
     padding: 30px 0;
     background: #F6F6F8;
+
+    &__flex{
+        padding-bottom: 30px;
+        border-bottom: 1px solid $light-grey-color;
+        width: 100%;
+    }
 }
 .footer__title{
     margin-bottom: 20px;
@@ -9,6 +15,46 @@
     line-height: 22 / 16 * 100%;
     color: $black-color;
 }
+.footer__item{
+    margin-bottom: 10px;
+
+    &:last-child{
+        margin-bottom: 0;
+    }
+}
+.footer__link{
+    font-size: 14px;
+    line-height: 22 / 14 * 100%;
+    color: $grey-color;
+    fill: $grey-color;
+    display: flex;
+    align-items: center;
+    transition: color 300ms cubic-bezier(0.4, 0, 0.2, 1), fill 300ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:focus,
+    &:hover{
+        color: #3090eb;
+        fill: #3090eb;
+    }
+}
+.footer__address{
+    font-size: 14px;
+    line-height: 22 / 14 * 100%;
+    color: $grey-color;
+    fill: $grey-color;
+    display: flex;
+    align-items: center;
+}
 .footer__basic{
     margin-top: 30px;
+}
+.footer__icon{
+    margin-right: 15px;
+}
+.footer__line{
+    padding-top: 30px;
+    font-size: 13px;
+    line-height: 21 / 13 * 100%;
+    text-align: center;
+    color: $grey-color;
 }
